--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
